--- a/index.html
+++ b/index.html
@@ -4,153 +4,159 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AA Lab Calculator</title>
-  <!-- External CSS file -->
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- Header with Logo -->
   <header>
-    <img src="logo.png" alt="AA Logo">
+    <div class="logo">🧪 <span class="aa-logo">AA</span> Lab Calculator</div>
     <nav>
       <a href="#molarity">Molarity</a>
       <a href="#dilution">Dilution</a>
-      <a href="#unit-conversion">Unit Conversion</a>
+      <a href="#unitConversion">Unit Conversion</a>
       <a href="#ph">pH</a>
       <a href="#normality">Normality</a>
-      <a href="#mol-weight">Molecular Weight</a>
-      <a href="#gas-law">Gas Law</a>
+      <a href="#molWeight">Mol. Weight</a>
+      <a href="#gasLaw">Gas Law</a>
       <a href="#temperature">Temperature</a>
+      <a href="#buffer">Buffer</a>
+      <a href="#solutionPrep">Solution Prep</a>
     </nav>
   </header>
 
-  <!-- Main Content -->
   <main>
-    <h1>AA Laboratory Calculator</h1>
-    <p>Free, simple, and reliable lab calculator tools for technicians and researchers.</p>
+    <section id="intro">
+      <h1>Welcome to AA Lab Calculator</h1>
+      <p>A free, user-friendly toolkit for laboratory technicians to perform everyday calculations with ease and accuracy.</p>
+    </section>
 
     <!-- Molarity -->
-    <section id="molarity">
+    <section id="molarity" class="calculator">
       <h2>Molarity Calculator</h2>
-      <label for="molarMass">Molar Mass (g/mol):</label>
-      <input type="number" id="molarMass">
-      <label for="soluteMass">Solute Mass (g):</label>
-      <input type="number" id="soluteMass">
-      <label for="solutionVolume">Solution Volume (L):</label>
-      <input type="number" id="solutionVolume">
+      <label>Molar Mass (g/mol): <input type="number" id="molarMass"> g/mol</label>
+      <label>Solute Mass (g): <input type="number" id="soluteMass"> g</label>
+      <label>Solution Volume (L): <input type="number" id="solutionVolume"> L</label>
       <button onclick="calculateMolarity()">Calculate</button>
-      <p id="molarityResult" class="result"></p>
+      <div class="result" id="molarityResult"></div>
     </section>
 
     <!-- Dilution -->
-    <section id="dilution">
+    <section id="dilution" class="calculator">
       <h2>Dilution Calculator</h2>
-      <label for="c1">Initial Concentration (C1):</label>
-      <input type="number" id="c1">
-      <label for="v1">Initial Volume (V1, L):</label>
-      <input type="number" id="v1">
-      <label for="c2">Final Concentration (C2):</label>
-      <input type="number" id="c2">
+      <label>C1 (mol/L): <input type="number" id="c1"> mol/L</label>
+      <label>V1 (L): <input type="number" id="v1"> L</label>
+      <label>C2 (mol/L): <input type="number" id="c2"> mol/L</label>
       <button onclick="calculateDilution()">Calculate</button>
-      <p id="dilutionResult" class="result"></p>
+      <div class="result" id="dilutionResult"></div>
     </section>
 
     <!-- Unit Conversion -->
-    <section id="unit-conversion">
+    <section id="unitConversion" class="calculator">
       <h2>Unit Conversion</h2>
-      <label for="value">Value:</label>
-      <input type="number" id="value">
-      <label for="fromUnit">From:</label>
-      <select id="fromUnit">
-        <option value="mg">mg</option>
-        <option value="g">g</option>
-        <option value="kg">kg</option>
-        <option value="ml">mL</option>
-        <option value="l">L</option>
-      </select>
-      <label for="toUnit">To:</label>
-      <select id="toUnit">
-        <option value="mg">mg</option>
-        <option value="g">g</option>
-        <option value="kg">kg</option>
-        <option value="ml">mL</option>
-        <option value="l">L</option>
-      </select>
+      <label>Value: <input type="number" id="value"></label>
+      <label>From: 
+        <select id="fromUnit">
+          <option value="mg">mg</option>
+          <option value="g">g</option>
+          <option value="kg">kg</option>
+          <option value="ml">mL</option>
+          <option value="l">L</option>
+        </select>
+      </label>
+      <label>To: 
+        <select id="toUnit">
+          <option value="mg">mg</option>
+          <option value="g">g</option>
+          <option value="kg">kg</option>
+          <option value="ml">mL</option>
+          <option value="l">L</option>
+        </select>
+      </label>
       <button onclick="convertUnits()">Convert</button>
-      <p id="conversionResult" class="result"></p>
+      <div class="result" id="conversionResult"></div>
     </section>
 
     <!-- pH -->
-    <section id="ph">
+    <section id="ph" class="calculator">
       <h2>pH Calculator</h2>
-      <label for="hConcentration">[H+] Concentration (mol/L):</label>
-      <input type="number" id="hConcentration" step="any">
+      <label>[H+] Concentration (mol/L): <input type="number" step="any" id="hConcentration"> mol/L</label>
       <button onclick="calculatePH()">Calculate</button>
-      <p id="phResult" class="result"></p>
+      <div class="result" id="phResult"></div>
     </section>
 
     <!-- Normality -->
-    <section id="normality">
+    <section id="normality" class="calculator">
       <h2>Normality Calculator</h2>
-      <label for="equivalents">Number of Equivalents:</label>
-      <input type="number" id="equivalents">
-      <label for="solutionVolumeN">Solution Volume (L):</label>
-      <input type="number" id="solutionVolumeN">
+      <label>Equivalents (eq): <input type="number" id="equivalents"> eq</label>
+      <label>Solution Volume (L): <input type="number" id="solutionVolumeN"> L</label>
       <button onclick="calculateNormality()">Calculate</button>
-      <p id="normalityResult" class="result"></p>
+      <div class="result" id="normalityResult"></div>
     </section>
 
     <!-- Molecular Weight -->
-    <section id="mol-weight">
+    <section id="molWeight" class="calculator">
       <h2>Molecular Weight Calculator</h2>
-      <label for="compoundMass">Compound Mass (g):</label>
-      <input type="number" id="compoundMass">
-      <label for="moles">Number of Moles:</label>
-      <input type="number" id="moles">
+      <label>Mass (g): <input type="number" id="compoundMass"> g</label>
+      <label>Moles (mol): <input type="number" id="moles"> mol</label>
       <button onclick="calculateMolWeight()">Calculate</button>
-      <p id="molWeightResult" class="result"></p>
+      <div class="result" id="molWeightResult"></div>
     </section>
 
     <!-- Gas Law -->
-    <section id="gas-law">
-      <h2>Gas Law (PV = nRT)</h2>
-      <label for="n">Moles of Gas (n):</label>
-      <input type="number" id="n">
-      <label for="t">Temperature (K):</label>
-      <input type="number" id="t">
-      <label for="vGas">Volume (L):</label>
-      <input type="number" id="vGas">
+    <section id="gasLaw" class="calculator">
+      <h2>Ideal Gas Law</h2>
+      <label>n (mol): <input type="number" id="n"> mol</label>
+      <label>T (K): <input type="number" id="t"> K</label>
+      <label>V (L): <input type="number" id="vGas"> L</label>
       <button onclick="calculateGasLaw()">Calculate</button>
-      <p id="gasResult" class="result"></p>
+      <div class="result" id="gasResult"></div>
     </section>
 
-    <!-- Temperature Conversion -->
-    <section id="temperature">
+    <!-- Temperature -->
+    <section id="temperature" class="calculator">
       <h2>Temperature Conversion</h2>
-      <label for="tempValue">Temperature Value:</label>
-      <input type="number" id="tempValue">
-      <label for="fromTemp">From:</label>
-      <select id="fromTemp">
-        <option value="c">Celsius</option>
-        <option value="f">Fahrenheit</option>
-        <option value="k">Kelvin</option>
-      </select>
-      <label for="toTemp">To:</label>
-      <select id="toTemp">
-        <option value="c">Celsius</option>
-        <option value="f">Fahrenheit</option>
-        <option value="k">Kelvin</option>
-      </select>
+      <label>Value: <input type="number" id="tempValue"></label>
+      <label>From: 
+        <select id="fromTemp">
+          <option value="c">Celsius</option>
+          <option value="f">Fahrenheit</option>
+          <option value="k">Kelvin</option>
+        </select>
+      </label>
+      <label>To: 
+        <select id="toTemp">
+          <option value="c">Celsius</option>
+          <option value="f">Fahrenheit</option>
+          <option value="k">Kelvin</option>
+        </select>
+      </label>
       <button onclick="convertTemperature()">Convert</button>
-      <p id="tempResult" class="result"></p>
+      <div class="result" id="tempResult"></div>
+    </section>
+
+    <!-- Buffer Preparation -->
+    <section id="buffer" class="calculator">
+      <h2>Buffer Solution Prep (Henderson–Hasselbalch)</h2>
+      <label>pKa: <input type="number" step="any" id="pKa"></label>
+      <label>Desired pH: <input type="number" step="any" id="desiredPH"></label>
+      <label>[Acid] (mol/L): <input type="number" step="any" id="acidConc"> mol/L</label>
+      <button onclick="calculateBuffer()">Calculate</button>
+      <div class="result" id="bufferResult"></div>
+    </section>
+
+    <!-- General Solution Prep -->
+    <section id="solutionPrep" class="calculator">
+      <h2>Solution Preparation</h2>
+      <label>Desired Concentration (mol/L): <input type="number" step="any" id="desiredConc"> mol/L</label>
+      <label>Desired Volume (L): <input type="number" step="any" id="desiredVol"> L</label>
+      <label>Molar Mass (g/mol): <input type="number" step="any" id="prepMolarMass"> g/mol</label>
+      <button onclick="calculateSolutionPrep()">Calculate</button>
+      <div class="result" id="solutionPrepResult"></div>
     </section>
   </main>
 
-  <!-- Footer -->
   <footer>
-    <p>© 2025 AA Lab Calculator. Built for lab technicians with ❤️.</p>
+    <p>Created with ❤️ by <span class="aa-logo">AA</span></p>
   </footer>
-
-  <!-- JS -->
-  <script src="script.js"></script>
 </body>
 </html>
