--- a/index.html
+++ b/index.html
@@ -7,35 +7,32 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header -->
-  <header class="header">
-    <img src="logo.png" alt="AR Brothers Logo" class="logo">
+  <header>
+    <img src="logo.svg" alt="AR Brothers Logo" class="logo">
     <h1>AR Brothers Lab Calculator</h1>
-    <p>Your daily companion for accurate lab work</p>
+    <nav>
+      <ul>
+        <li><button onclick="loadCalculator('molarity')">Molarity</button></li>
+        <li><button onclick="loadCalculator('dilution')">Dilution</button></li>
+        <li><button onclick="loadCalculator('unitConversion')">Unit Conversion</button></li>
+        <li><button onclick="loadCalculator('ph')">pH</button></li>
+        <li><button onclick="loadCalculator('buffer')">Buffer Solution</button></li>
+        <li><button onclick="loadCalculator('solutionPrep')">Solution Prep</button></li>
+        <li><button onclick="loadCalculator('centrifuge')">Centrifuge RCF</button></li>
+      </ul>
+    </nav>
   </header>
 
-  <!-- Navigation -->
-  <nav class="nav">
-    <button onclick="showCalculator('molarity')">Molarity</button>
-    <button onclick="showCalculator('dilution')">Dilution</button>
-    <button onclick="showCalculator('unitConversion')">Unit Conversion</button>
-    <button onclick="showCalculator('phCalc')">pH</button>
-    <button onclick="showCalculator('bufferPrep')">Buffer Prep</button>
-    <button onclick="showCalculator('solutionPrep')">Solution Prep</button>
-    <button onclick="showCalculator('centrifuge')">Centrifuge RCF↔RPM</button>
-  </nav>
-
-  <!-- Calculators Container -->
-  <main id="calculator-container" class="calculator-container">
-    <p>Select a calculator above to begin.</p>
+  <!-- Container where calculators load -->
+  <main id="calculator-container">
+    <p>Select a calculation from the menu above.</p>
   </main>
 
-  <!-- Footer -->
-  <footer class="footer">
+  <footer>
     <p>Created with ❤️ by AR Brothers</p>
   </footer>
 
-  <!-- Script -->
+  <!-- Ensure script loads at the end -->
   <script src="script.js"></script>
 </body>
 </html>
