--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>
+    <img src="logo.png" alt="AR Brothers Logo" class="logo">
     <div class="logo">🧪 <span class="aa-logo">AA</span> Lab Calculator</div>
     <nav>
       <a href="#molarity">Molarity</a>
@@ -213,3 +214,4 @@
   </footer>
 </body>
 </html>
+
