--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <img src="logo.png" alt="AR Brothers Logo" class="logo">
-    <div class="logo">🧪 <span class="aa-logo">AA</span> Lab Calculator</div>
+    <div class="logo">🧪 <span class="aa-logo">AR Brothers</span> Lab Calculator</div>
     <nav>
       <a href="#molarity">Molarity</a>
       <a href="#dilution">Dilution</a>
@@ -214,4 +214,5 @@
   </footer>
 </body>
 </html>
+
 
