--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AA Lab Calculator</title>
+  <title>AR Brothers Lab Calculator</title>
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
 <body>
   <header>
     <img src="logo.png" alt="AR Brothers Logo" class="logo">
-    <div class="logo">🧪 <span class="aa-logo">AR Brothers</span> Lab Calculator</div>
+    <div class="logo">🧪 <span class="AR Brothers-logo">AR Brothers</span> Lab Calculator</div>
     <nav>
       <a href="#molarity">Molarity</a>
       <a href="#dilution">Dilution</a>
@@ -31,7 +31,7 @@
 
   <main>
     <section id="intro">
-      <h1>Welcome to AA Lab Calculator</h1>
+      <h1>Welcome to AR Brothers Lab Calculator</h1>
       <p>A free, user-friendly toolkit for laboratory technicians to perform everyday calculations with ease and accuracy.</p>
     </section>
 
@@ -210,9 +210,10 @@
   </main>
 
   <footer>
-    <p>Created with ❤️ by <span class="aa-logo">AA</span></p>
+    <p>Created with ❤️ by <span class="AR Brothers-logo">AR Brothers</span></p>
   </footer>
 </body>
 </html>
+
 
 
